# Vector

./: .gitignore  README.md  Scheme.md  context.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/api/: Dockerfile  openapi.json  pyproject.toml
apps/api/scripts/: generate_openapi.py
apps/api/src/epidemic_sim/api/: main.py
apps/api/src/epidemic_sim/config/: settings.py
apps/api/src/epidemic_sim/core/: db.py  errors.py  idempotency.py  logging.py  models.py  redis_pool.py  security.py  tracing.py  utils.py
apps/api/src/epidemic_sim/routes/: datasets.py  health.py  regions.py  runs.py  scenarios.py  stream.py
apps/api/src/epidemic_sim/schemas/: dto.py
apps/api/src/epidemic_sim/services/: datasets.py  regions.py  run_series.py  runs.py  scenarios.py
apps/api/tests/: test_health.py
apps/web/: .eslintrc.js  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/compare/: page.tsx
apps/web/app/gallery/: page.tsx
apps/web/app/hooks/: useOptionalAuth.ts
apps/web/app/run/[id]/: page.tsx
apps/web/app/scenario/new/: page.tsx
apps/web/components/: glimmering-map-card.tsx  map-choropleth.tsx  mobility-uploader.tsx  npi-timeline.tsx  pathogen-sliders.tsx  region-picker.tsx  report-modal.tsx  run-stats-card.tsx  scenario-diff-view.tsx  series-charts.tsx  share-link.tsx  theme-toggle.tsx  time-scrubber.tsx
apps/web/components/layout/: app-sidebar.tsx
apps/web/components/ui/: background-boxes.tsx  infinite-moving-cards.tsx  switch.tsx
apps/web/lib/: api-client.ts
apps/web/store/: simulation-store.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/epidemic_sim_worker/: db.py  logging.py  models.py  runner.py
apps/worker/src/epidemic_sim_worker/config/: settings.py
apps/worker/src/epidemic_sim_worker/queue/: jobs.py
apps/worker/src/epidemic_sim_worker/simulation/: model.py
apps/worker/tests/: test_simulation.py
docs/: architecture.md  gap-analysis.md  requirements.md  runbook.md
docs/adr/: 0001-monorepo.md
infrastructure/: otel-collector-config.yaml  prometheus.yml
