[project]
name = "epidemic-sim-worker"
version = "0.1.0"
description = "Simulation worker for the epidemic simulation platform"
authors = [
  { name = "Vector Platform", email = "engineering@vector.local" }
]
requires-python = ">=3.11"
dependencies = [
  "numpy==2.1.2",
  "numba==0.60.0",
  "redis==5.2.0",
  "rq==1.15.1",
  "pydantic==2.9.2",
  "pydantic-settings==2.4.0",
  "structlog==24.3.0",
  "opentelemetry-sdk==1.27.0",
  "opentelemetry-exporter-otlp==1.27.0",
  "opentelemetry-instrumentation-redis==0.48b0",
  "prometheus-client==0.21.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "mypy==1.12.0",
  "ruff==0.7.2",
  "types-redis==4.6.0.20241008"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "S", "ASYNC", "RUF", "PIE", "SIM"]
fix = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["apps/worker/tests"]
addopts = "--strict-markers --disable-warnings"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
